--- a/Sage.ipynb
+++ b/Sage.ipynb
@@ -1747,6 +1747,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "bR4pHaPiEccG",
         "outputId": "c74cb069-a887-4b10-feb6-69e031493abc"
       },
@@ -1932,6 +1933,7 @@
             "e108a5ca4d28477e92d4bcf4eeb1c9d6"
           ]
         },
+        "collapsed": true,
         "id": "3aBw-ycvFN_M",
         "outputId": "c707a155-f15a-4f24-f6d1-12c441f6c9da"
       },
@@ -2019,6 +2021,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "cZ0ZcOEeHz0B",
         "outputId": "6cc4a9a7-4fb1-4d6b-bb0f-773db3b30766"
       },
@@ -2105,6 +2108,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "7-4tKVhtIw35",
         "outputId": "0c25ebb7-20c9-421a-f5a5-8a7d0ae359de"
       },
@@ -2181,6 +2185,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "R_bWoPl-JBi4",
         "outputId": "306a2b09-0ac1-4def-acf4-4ede22a9dcee"
       },
